# hindsight-mcp

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  backup.sh  config.json  hindsight-implementation-plan.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  schema.sql  server.py  setup-backup-schedule.sh  test-data.sql
.claude/: LESSONS_LEARNED.md  implementation-phases.md  settings.local.json
.claude/commands/: end-session.md
.claude/sessions/: README.md
.claude/sessions/2025-12-03/: contributing-agentic-update.md  phase-6-7-testing-and-documentation.md
.github/workflows/: ci.yml  release.yml
docs/: USAGE_EXAMPLES.md  session-kb-format.md
tests/: __init__.py  conftest.py  test_database.py  test_fts.py  test_performance.py  test_tools.py
