[project]
name = "hindsight-mcp"
version = "1.0.0"
description = "MCP server for personal development knowledge base - learning from experience"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FOS Computer Services, LLC", email = "contact@foscomputerservices.com"}
]
maintainers = [
    {name = "FOS Computer Services, LLC", email = "contact@foscomputerservices.com"}
]
keywords = ["mcp", "knowledge-base", "development", "learning", "swift", "ios", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp>=0.9.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/FOS-Computer-Services/hindsight-mcp"
Documentation = "https://github.com/FOS-Computer-Services/hindsight-mcp#readme"
Repository = "https://github.com/FOS-Computer-Services/hindsight-mcp"
Issues = "https://github.com/FOS-Computer-Services/hindsight-mcp/issues"

[project.scripts]
hindsight-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
