[project]
name = "hindsight-mcp"
version = "1.0.0"
description = "MCP server for personal development knowledge base - learning from experience"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "FOS Computer Services, LLC", email = "contact@foscomputerservices.com"}
]
maintainers = [
    {name = "FOS Computer Services, LLC", email = "contact@foscomputerservices.com"}
]
keywords = ["mcp", "knowledge-base", "development", "learning", "swift", "ios", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp>=0.9.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/FOS-Computer-Services/hindsight-mcp"
Documentation = "https://github.com/FOS-Computer-Services/hindsight-mcp#readme"
Repository = "https://github.com/FOS-Computer-Services/hindsight-mcp"
Issues = "https://github.com/FOS-Computer-Services/hindsight-mcp/issues"

[project.scripts]
hindsight-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress - try/except/pass is often clearer
    "SIM108", # use ternary operator instead of if-else
    "C401",   # unnecessary generator - set comprehension not always clearer
]

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
